--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <nav class="nav-container">
         <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
         <ul class="header-list">
-            <li><a href="./index.html" class="menu">Studio</a></li>
+            <li><a href="./index.html" class="menu-first">Studio</a></li>
             <li><a href="" class="menu">Portfolio</a></li>
             <li><a href="" class="menu">Contacts</a></li>
         </ul>
