--- a/index.html
+++ b/index.html
@@ -45,19 +45,39 @@
         <h2 class="visually-hidden">Team</h2>
         <ul class="main-team">
        <li class="main-team-list">
+        <div class="icon-container">
+          <svg class="card-advantages" width="64" height="64">
+            <use class="icon-advantages" href="images/icons.svg#icon-antenna"></use>
+        </svg>
+    </div>
         <h3 class="team-list">Strategy</h3>
         <p class="team-goal">Our goal is to identify the business
         problem to walk away with the perfect and creative solution. </p>
       </li>
       <li class="main-team-list">
+        <div class="icon-container">
+          <svg class="card-advantages" width="64" height="64">
+            <use class="icon-advantages" href="./images/icons.svg#icon-clock"></use>
+        </svg>
+    </div>
         <h3 class="team-list">Punctuality</h3>
         <p class="team-goal">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
       </li>
       <li class="main-team-list">
+        <div class="icon-container">
+          <svg class="card-advantages" width="64" height="64">
+            <use class="icon-advantages" href="./images/icons.svg#icon-diagram"></use>
+        </svg>
+    </div>
         <h3 class="team-list">Diligence</h3>
         <p class="team-goal">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
       </li>
       <li class="main-team-list">
+        <div class="icon-container">
+          <svg class="card-advantages" width="64" height="64">
+            <use class="icon-advantages" href="./images/icons.svg#icon-astronaut"></use>
+        </svg>
+    </div>
         <h3 class="team-list">Technologies</h3>
         <p class="team-goal">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
       </li>
