--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <li class="main-team-list">
         <div class="icon-container">
           <svg class="card-advantages" width="64" height="64">
-            <use class="icon-advantages" href="images/icons.svg#icon-antenna"></use>
+            <use class="icon-advantages" href="./images/icons.svg#icon-antenna"></use>
         </svg>
     </div>
         <h3 class="team-list">Strategy</h3>
@@ -93,6 +93,36 @@
           <div class="name-prof">
           <h3 class="name">Mark Guerrero</h3>
           <p class="prof">Product Designer</p>
+          <ul class="team-social">
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
           </div>
         </li>
         <li class="back">
