--- a/index.html
+++ b/index.html
@@ -130,6 +130,36 @@
           <div class="name-prof">
           <h3 class="name">Tom Ford</h3>
           <p class="prof">Frontend Developer</p>
+          <ul class="team-social">
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
           </div>
         </li>
         <li class="back">
@@ -137,6 +167,36 @@
           <div class="name-prof">
           <h3 class="name">Camila Garcia</h3>
           <p class="prof">Marketing</p>
+          <ul class="team-social">
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
           </div>
         </li>
         <li class="back">
@@ -144,6 +204,36 @@
           <div class="name-prof">
           <h3 class="name">Daniel Wilson</h3>
           <p class="prof">UI Designer</p>
+          <ul class="team-social">
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="team-social-icons">
+                <a class="team-social-link" href="">
+                    <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
           </div>
         </li>
       </ul>
@@ -154,42 +244,84 @@
       <h2 class="title">Our Portfolio</h2>
       <ul class="our-portfolio-list">
         <li class="portfolio-foto">
-          <img src="./images/5.jpg" alt="Banking App" width="360">
+          <div class="overlay-container">
+          <img src="./images/5.jpg" alt="Banking App" width="360" height="300">
+          <p class="overlay-text">
+            14 Stylish and User-Friendly App Design Concepts · Task
+            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+            · Cloud Storage App
+          </p>
+          </div>
           <div class="port-name">
           <h3 class="name">Banking App</h3>
           <p class="prof">App</p>
         </div>
         </li>
         <li class="portfolio-foto" >
-          <img src="./images/6.jpg" alt="Cashless Payment" width="360">
+          <div class="overlay-container">
+          <img src="./images/6.jpg" alt="Cashless Payment" width="360" height="300">
+          <p class="overlay-text">
+            14 Stylish and User-Friendly App Design Concepts · Task
+            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+            · Cloud Storage App
+          </p>
+          </div>
           <div class="port-name">
           <h3 class="name">Cashless Payment</h3>
           <p class="prof">Marketing</p>
         </div>
         </li>
         <li class="portfolio-foto">
-          <img src="./images/7.jpg" alt="Meditation App" width="360">
+          <div class="overlay-container">
+          <img src="./images/7.jpg" alt="Meditation App" width="360" height="300">
+          <p class="overlay-text">
+            14 Stylish and User-Friendly App Design Concepts · Task
+            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+            · Cloud Storage App
+          </p>
+          </div>
           <div class="port-name">
           <h3 class="name">Meditation App</h3>
           <p class="prof">App</p>
         </div>
         </li>
         <li class="portfolio-foto">
-          <img src="./images/8.jpg" alt="Taxi Service" width="360">
+          <div class="overlay-container">
+          <img src="./images/8.jpg" alt="Taxi Service" width="360" height="300">
+          <p class="overlay-text">
+            14 Stylish and User-Friendly App Design Concepts · Task
+            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+            · Cloud Storage App
+          </p>
+          </div>
           <div class="port-name">
           <h3 class="name">Taxi Service</h3>
           <p class="prof">Marketing</p>
         </div>
         </li>
         <li class="portfolio-foto">
-          <img src="./images/9.jpg" alt="Screen Illustrations" width="360">
+          <div class="overlay-container">
+          <img src="./images/9.jpg" alt="Screen Illustrations" width="360" height="300">
+          <p class="overlay-text">
+            14 Stylish and User-Friendly App Design Concepts · Task
+            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+            · Cloud Storage App
+          </p>
+          </div>
           <div class="port-name">
           <h3 class="name">Screen Illustrations</h3>
           <p class="prof">Design</p>
           </div>
         </li>
         <li class="portfolio-foto">
-          <img src="./images/10.jpg" alt="Online Courses" width="360">
+          <div class="overlay-container">
+          <img src="./images/10.jpg" alt="Online Courses" width="360" height="300">
+          <p class="overlay-text">
+            14 Stylish and User-Friendly App Design Concepts · Task
+            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+            · Cloud Storage App
+          </p>
+          </div>
           <div class="port-name">
           <h3 class="name">Online Courses</h3>
           <p class="prof">Marketing</p>
