--- a/index.html
+++ b/index.html
@@ -331,11 +331,51 @@
     </div>
     </section>
    </main>
-   <footer class="ground">
-    <div class="container">
-    <a href="./index.html" class="studi-logo">Web<span class="studi">Studio</span></a>
-    <p class="parag">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-  </div>
-   </footer>
+   <footer class="footer">
+    <div class="container footer-container">
+      <div class="footer-container-logo">
+        <a class="logo-footer" href="./index.html"
+          >Web<span class="logo-footer-end">Studio</span></a
+        >
+        <p class="advertisement">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+      <div class="container-footer-link">
+        <p class="social-media">Social media</p>
+        <ul class="footer-link-list">
+          <li class="footer-link-items">
+            <a href="" class="footer-icon">
+              <svg class="footer-soc-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-link-items">
+            <a href="" class="footer-icon">
+              <svg class="footer-soc-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-link-items">
+            <a href="" class="footer-icon">
+              <svg class="footer-soc-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-link-items">
+            <a href="" class="footer-icon">
+              <svg class="footer-soc-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
